tests/interpreter/pass/030-array-element-assign copy 2.hyg
let n: int = 5;
let arr: array {int} = array(n, 1);
arrayElem(arr, 2) <- arrayElem(arr, 2) + n;

assert(arrayElem(arr, 2) = 6)