tests/interpreter/fail/029-array-assign-element-out-of-upper-bound.hyg
let arr: array {int} = array(2, 1);
arrayElem(arr, 2) <- arrayElem(arr, 0);
print("should not print!")